--- a/src/quest_manager/templates/quest_manager/comments.html
+++ b/src/quest_manager/templates/quest_manager/comments.html
@@ -1,40 +1,22 @@
 {% load crispy_forms_tags %}
 {% load comment_tags %}
 
-<!-- <h3>Submission</h3> -->
-<form method="POST" enctype="multipart/form-data" action="{% url 'comments:create' %}">{% csrf_token %}
-  {{ main_comment_form | crispy }}
-  <!-- <input type="file" name="files" multiple /> -->
-  {% with target|content_type as ctype %}
-    <input type="hidden" name="target_content_type_id" value="{{ ctype.pk }}">
-  {% endwith %}
-  <input type='hidden' name = 'target_id' value='{{target.id}}' />
-  <input type='hidden' name = 'origin_path' value='{{request.get_full_path}}' />
-  <input type='hidden' name = 'success_url' value='{% url "quests:complete" submission.id %}' />
-  <input type='hidden' name = 'success_message' value='Your quest was successfully submitted.' />
-  <div class="panel-body">
-    <input type='submit' class='btn btn-primary' value='Submit Quest for Completion' />
-    {% if not submission.is_completed %}
-      <a class="btn btn-danger" href="{% url 'quests:drop' submission.id %}" role="button">Drop Quest</a>
-    {% endif %}
-  </div>
-</form>
-<p>
-  <ul class="list-group">
-  {% for comment in comments %}
+<ul class="list-group">
+  {% for comment in target_comments %}
     <li class="list-group-item">"{{comment.text}}" <small>-{{comment.user}} | {{comment.timestamp|timesince}} ago</small>
       {% if not comment.is_child %}
       <div class="pull-right">
-        <a href='#' class='reply_btn btn btn-default btn-sm'>Reply</a>
-        <a href='{{comment.get_absolute_url}}' class='btn btn-default btn-sm'>View Thread</a>
+        <a href='#' class='reply_btn btn btn-default btn-xs'>Reply</a>
+        <a href='{{comment.get_absolute_url}}' class='btn btn-default btn-xs'>View Thread</a>
       </div>
-        <p><br />
+        {% if comment.get_children %}
           <ul class="list-group">
             {% for child in comment.get_children %}
               <li class="list-group-item">"{{child.text}}" <small>-{{child.user}}</small></li>
             {% endfor %}
           </ul>
-        </p>
+        {% endif %}
+
         <div class='reply_comment'>
           <form method="POST" action="{% url 'comments:create' %}">{% csrf_token %}
             {{ reply_comment_form | crispy }}
@@ -46,5 +28,4 @@
       {% endif %}
     </li>
   {% endfor %}
-  </ul>
-</p>
+</ul>
