--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -132,19 +132,25 @@ td {
 
 .panel-default > .panel-heading {
   background-color: #FFF;
+  background-image: none;
 }
 
-.panel-default > .panel-heading.accordian-trigger:hover {
-  background-color: #F5F5F5;
+.panel-default > .panel-heading:hover {
+    background-image: linear-gradient(to bottom, #F5F5F5 0px, #E8E8E8 100%);
+    background-repeat: repeat-x;
 }
 
 .panel-default > .panel-heading.accordian-trigger.active {
   /*background-color: #337AB7;*/
-  color: #FFF;
+  color: #FFF !important;
   text-shadow: 0px -1px 0px #286090;
   background-image: linear-gradient(to bottom, #337AB7 0px, #2B669A 100%);
   background-repeat: repeat-x;
   border-color: #2B669A;
+}
+
+.panel-default > .panel-heading.accordian-trigger.active small {
+  color: #FFF !important;
 }
 
 .panel.active {
@@ -156,14 +162,57 @@ td {
   margin: -7px 5px -10px 0px;
 }
 
-
-
 /*Make clickable accordian tabs change to pointer cursor*/
 .accordian-trigger {
   cursor: pointer;
 }
 
+/**** panel packed together: add packed class to panel group div ***/
+.panel-group-packed .panel {
+  margin-top: 0px !important;
+  border-radius: 0px ;
+  border-bottom-style: none;
+}
+
+.panel-group-packed .panel:first-child{
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.panel-group-packed .panel:last-child {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-style: solid;
+}
+
+.panel-group-packed .panel.active + .panel {
+  border-top-color: #2B669A;
+}
+
+.panel-group-packed .panel.active:last-child {
+  border-bottom-color: #2B669A;
+}
+
+.panel-group-packed .panel-heading.active {
+  border-radius: 0px ;
+}
+
+,
+.panel-group-packed .panel-heading.active:first-child
+
+
+
 /*************************************************************/
+
+/***********ACCORDIAN COMMENTS *******************************/
+
+.panel>.list-group>.list-group-item>.list-group {
+  margin-bottom: 0px
+}
+
+.reply_comment {
+  display: none;
+}
 
 
 /*Make the container act like container-fluid at small and medium sizes*/
