--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -26,13 +26,22 @@
     <div class="panel-heading">
       <h3 class="panel-title">Quest Submission Form</h3>
     </div>
+    <div class="panel-body panel-summernote">
       {% with submission as target %}
         {% include "quest_manager/comment_form_main.html" %}
       {% endwith %}
+    </div>
+  </div>
 
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <h3 class="panel-title">Past Submissions and Comments</h3>
+    </div>
+    <div class="panel-body panel-body-comments">
         {% with submission.get_comments as target_comments %}
           {% include "quest_manager/comments.html" %}
         {% endwith %}
+    </div>
   </div>
 
 {% endblock %}
