Profiel detail and submission comment styling

--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -1,6 +1,6 @@
 {% extends "profile_manager/base.html" %}
 
-{% block heading_inner %}{{ heading }}
+{% block heading_inner %}{{ object.user.username }}'s Profile
   <a class="btn btn-info" href="{% url 'profiles:profile_update' %}" role="button">Edit</a>
 {% endblock %}
 
