--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -87,7 +87,7 @@
             <li><a href='javascript:var%20script=document.createElement("script");script.src="http://google-gravity-bookmarklet.googlecode.com/svn/trunk/bookmarklet/";document.body.appendChild(script);void(0);'>Turn on Gravity</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Profile</li>
-            <li><a href="{% url 'profiles:profile_detail'%}">View Profile</a></li>
+            <li><a href="{% url 'profiles:profile_detail' request.user.id %}">View Profile</a></li>
             <li><a href="{% url 'notifications:list'%}">Notifications</a></li>
           </ul>
         </li>
