submission approve view

--- a/src/quest_manager/templates/quest_manager/comment_form_approval.html
+++ b/src/quest_manager/templates/quest_manager/comment_form_approval.html
@@ -1,21 +1,10 @@
 {% load crispy_forms_tags %}
 {% load comment_tags %}
 
-<!-- <h3>Submission</h3> -->
-<form method="POST" enctype="multipart/form-data" action="{% url 'comments:create' %}">{% csrf_token %}
-  {{ main_comment_form | crispy }}
-  <!-- <input type="file" name="files" multiple /> -->
-  {% with target|content_type as ctype %}
-    <input type="hidden" name="target_content_type_id" value="{{ ctype.pk }}">
-  {% endwith %}
-  <input type='hidden' name = 'target_id' value='{{target.id}}' />
-  <input type='hidden' name = 'origin_path' value='{{request.get_full_path}}' />
-  <input type='hidden' name = 'success_url' value='{% url "quests:complete" target.id %}' />
-  <input type='hidden' name = 'success_message' value='Your quest was successfully submitted.' />
-  <div class="panel-body">
-    <input type='submit' class='btn btn-primary' value='Submit Quest for Completion' />
-    {% if not target.is_completed %}
-      <a class="btn btn-danger" href="" role="button">Drop Quest</a>
-    {% endif %}
+<form method="POST" enctype="multipart/form-data" action="{% url 'quests:approve' target.id %}">{% csrf_token %}
+  {{ quick_reply_form | crispy }}
+  <div>
+    <input type='submit' name='approve_button' class='btn btn-success' value='Approve' />
+    <input type='submit' name='return_button' class='btn btn-danger' value='Return' />
   </div>
 </form>
