--- a/src/quest_manager/templates/quest_manager/quest_approval.html
+++ b/src/quest_manager/templates/quest_manager/quest_approval.html
@@ -22,7 +22,7 @@
   </div>
   {% endfor %}
 </div>
-
+<!--
 <div class="panel panel-primary">
   <div class="panel-heading">Panel heading with several panel bodies</div>
   <div class="panel-body">Panel body</div>
@@ -72,7 +72,7 @@
     <li class="list-group-item list-group-item">list-grou-item</li>
   </ul>
 
-</div>
+</div> -->
 
 {% endblock %}
 
