--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -71,7 +71,7 @@ iframe {
 }
 
 .panel-summernote iframe, .list-group-item-summernote iframe {
-  height: 550px !important;
+  /*height: 500px !important;*/
 }
 
 
