--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -88,8 +88,12 @@ form .panel-body {
 
 
 /************ALERTS *************************/
-.alert:first-child {
+.alert:first-of-type {
   margin-top: 10px;
+}
+
+.alert {
+  margin-bottom: 0px;
 }
 
 /******** Bootstrap Tables ******************************/
