--- a/src/quest_manager/templates/quest_manager/comment_form_main.html
+++ b/src/quest_manager/templates/quest_manager/comment_form_main.html
@@ -9,13 +9,18 @@
   {% endwith %}
   <input type='hidden' name = 'target_id' value='{{target.id}}' />
   <input type='hidden' name = 'origin_path' value='{{request.get_full_path}}' />
-  <input type='hidden' name = 'success_url' value='{% url "quests:complete" target.id %}' />
+  {% if request.user.is_staff %}
+    <input type='hidden' name = 'success_url' value='{% url "quests:approvals" %}' />
+  {% else %}
+    <input type='hidden' name = 'success_url' value='{% url "quests:complete" target.id %}' />
+  {% endif %}
   <input type='hidden' name = 'success_message' value='Your quest was successfully submitted.' />
   <div class="panel-body">
     {% if target.is_completed %}
       <input type='submit' class='btn btn-primary' value='Add Submission Comment' />
     {% else %}
-      <input type='submit' class='btn btn-primary' value='Submit Quest for Completion' />
+      <input type='submit' class='btn btn-primary'
+        value='{% if request.user.is_staff %}Submit Comment{% else %}Submit Quest for Completion{% endif %}' />
       <a class="btn btn-danger" href="{% url 'quests:drop' target.id %}" role="button">Drop Quest</a>
     {% endif %}
   </div>
