--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -14,7 +14,7 @@
     <div class="panel accordian
       {% if s.id == active_id %} active {% endif %}
       {% if object.sticky %}panel-info{% else %}panel-default{% endif %}">
-      <div class="panel-heading accordian accordian-trigger
+      <div class="panel-heading accordian accordian-trigger panel-heading-tall
         {% if s.id == active_id %} active {% endif %}"
         role="tab" id="heading{{s.id}}"
         aria-expanded="{% if s.id == active_id %}true{% else %}false{% endif %}"
