--- a/src/quest_manager/templates/quest_manager/tab_quests_available.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_available.html
@@ -1,42 +1,52 @@
 
   {% if available_quests %}
 
-  <table data-toggle="table"
-          data-classes="table table-hover"
-          data-detail-view="true"
-          data-detail-formatter="detailFormatter"
-          data-pagination="true"
-          data-sidePagination="left"
-          >
-     <thead>
-       <tr>
-          <th> </th>
+  <div class="row panel-heading">
+    <div class="col-xs-1"></div>
+    <div class="col-xs-5">Quest</div>
+    <div class="col-xs-1">XP   </div>
+    <div class="col-xs-2">Ave Time</div>
+    <div class="col-xs-3">Due Date</div>
+  </div>
+  <div class="panel-group panel-group-packed" id="accordion" role="tablist" aria-multiselectable="true">
+  {% for q in available_quests %}
+    <div class="panel panel-default accordian {% if q.id == active_q_id %} active {% endif %}">
+      <div class="panel-heading accordian accordian-trigger panel-heading-tall
+        {% if q.id == active_q_id %} active {% endif %}"
+        role="tab" id="heading-quest-{{q.id}}"
+        aria-expanded="{% if q.id == active_q_id %}true{% else %}false{% endif %}"
+        aria-controls="collapse{{q.id}}"
+        data-parent="#accordion" data-toggle="collapse" data-target="#collapse-quest-{{q.id}}">
 
-          <th data-sortable="true">Quest</th>
-          <th data-halign="center" data-align="center" data-sortable="true">XP</th>
-          <th data-halign="center" data-align="center" data-sortable="true" data-formatter="%s min">Est. Time</th>
-          <th data-halign="center" data-align="center" data-sortable="true">Category</th>
-          <th data-visible="false">Short Description</th>
-       </tr>
-      </thead>
-      <tbody>
-      {% for q in available_quests %}
-      <tr>
-        <td data-field="icon"><img class="media-object" src="{{ q.icon_url|default_if_none:'#' }}" alt="icon" height="45px"/></td>
-        <td data-field="name">{{q.name}}</td>
-        <td data-field="xp" >{{q.xp}}</td>
-        <td data-field="time" >{{q.id}}</td>
-        <td data-field="category" >{{q.category}}</td>
-        <td data-field="short_description">
-          <div>
-             {{q.short_description}}
+        <div class="row">
+        <h4 class="panel-title">
+          <div class="col-xs-1">
+            <img class="media-object panel-title-img" src="{{ q.icon_url|default_if_none:'#' }}" alt="icon"/>
           </div>
-          {% include "quest_manager/buttons.html" %}
-        </td>
-     </tr>
-     {% endfor %}
-     </tbody>
-   </table>
+          <div class="col-xs-5">{{q.name}}</div>
+          <div class="col-xs-1">{{q.xp}}  </div>
+          <div class="col-xs-2">{{q.id}}</div>
+          <div class="col-xs-3"><small>{{q.date_expired}}</small></div>
+        </h4>
+      </div>
+
+      </div>
+      <div id="collapse-quest-{{q.id}}"
+        class="panel-collapse collapse {% if q.id == active_q_id %} in {% endif %}"
+        role="tabpanel" aria-labelledby="heading-quest-{{q.id}}">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-info">Submission Details</li>
+          <li class="list-group-item list-group-item-buttons">
+            {% include "quest_manager/buttons.html" %}
+            {{quest.submission_details|safe}}
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  {% endfor %}
+  </div>
+
   {% else %}
     <p>No quests are available.</p>
   {% endif %}
