--- a/src/quest_manager/templates/quest_manager/tab_quests_submission.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_submission.html
@@ -1,50 +1,64 @@
+{% load crispy_forms_tags %}
+{% if submissions %}
 
-  {% if submissions %}
+  <div class="row panel-heading">
+    <div class="col-xs-1"></div>
+    <div class="col-xs-5">Quest</div>
+    <div class="col-xs-1">XP   </div>
+    <div class="col-xs-2">Ave Time</div>
+    <div class="col-xs-3">Due Date</div>
+  </div>
+  <div class="panel-group panel-group-packed" id="accordion" role="tablist" aria-multiselectable="true">
+  {% for s in submissions %}
+    <div class="panel panel-default accordian {% if s.id == active_id %} active {% endif %}">
+      <div class="panel-heading accordian accordian-trigger panel-heading-tall
+        {% if s.id == active_id %} active {% endif %}"
+        role="tab" id="heading-{{s.id}}"
+        aria-expanded="{% if s.id == active_id %}true{% else %}false{% endif %}"
+        aria-controls="collapse-{{s.id}}"
+        data-parent="#accordion" data-toggle="collapse" data-target="#collapse-{{s.id}}">
 
-  <table data-toggle="table"
-          data-classes="table table-hover"
-          data-detail-view="true"
-          data-detail-formatter="detailFormatter"
-          data-pagination="true"
-          data-sidePagination="left"
-          >
-     <thead>
-       <tr>
-          <th> </th>
+        <div class="row">
+          <h4 class="panel-title">
+            <div class="col-xs-1">
+              <img class="media-object panel-title-img" src="{{ s.quest.icon_url|default_if_none:'#' }}" alt="icon"/>
+            </div>
+            <div class="col-xs-5">{{s.quest.name}}</div>
+            <div class="col-xs-1">{{s.quest.xp}}  </div>
+            <div class="col-xs-2">{{s.quest.id}}</div>
+            <div class="col-xs-3"><small>{{s.quest.date_expired}}</small></div>
+          </h4>
+        </div>
+      </div>
 
-          <th data-sortable="true">Quest</th>
-          <th data-halign="center" data-align="center" data-sortable="true">XP</th>
-          <th data-halign="center" data-align="center" data-sortable="true" data-formatter="%s min">Est. Time</th>
-          <th data-halign="center" data-align="center" data-sortable="true">Category</th>
-          <th data-visible="false">Short Description</th>
-       </tr>
-      </thead>
-      <tbody>
-      {% for s in submissions %}
-      <tr>
-        <td data-field="icon"><img class="media-object" src="{{ s.quest.icon_url|default_if_none:'#' }}" alt="icon" height="45px"/></td>
-        <td data-field="name">{{s.quest.name}}</td>
-        <td data-field="xp" >{{s.quest.xp}}</td>
-        <td data-field="time" >{{s.quest.id}}</td>
-        <td data-field="category" >{{s.quest.category}}</td>
-        <td data-field="short_description">
-          <div>
-             {{s.quest.short_description}}
-          </div>
-          <div class="pull-right">
-            {% if not completed %}
-              <a class="btn btn-danger" href="{% url 'quests:drop' s.id %}" role="button">Drop</a>
-              <a class="btn btn-primary" href="{% url 'quests:submission' s.id %}" role="button">Continue</a>
-            {% else %}
-              <a class="btn btn-info" href="{% url 'quests:submission' s.id %}" role="button">View Details</a>
-            {% endif %}
-          </div>
-        </td>
-       </tr>
-     {% endfor %}
-     </tbody>
-   </table>
+      <div id="collapse-{{s.id}}"
+        class="panel-collapse collapse {% if s.id == active_id %} in {% endif %}"
+        role="tabpanel" aria-labelledby="heading-{{s.id}}">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-info">Submission Details</li>
+          <li class="list-group-item list-group-item-buttons">
+            <div class="pull-right">
+              {% if not completed %}
+                <a class="btn btn-danger" href="{% url 'quests:drop' s.id %}" role="button">Drop</a>
+                <a class="btn btn-primary" href="{% url 'quests:submission' s.id %}" role="button">Continue</a>
+              {% else %}
+                <a class="btn btn-info" href="{% url 'quests:submission' s.id %}" role="button">View Details</a>
+              {% endif %}
+            </div>
+            {{s.quest.submission_details|safe}}
+          </li>
+          <li class="list-group-item list-group-item-info">Submission Comments</li>
+          {% with s.get_comments as target_comments %}
+            {% include "quest_manager/comments.html" %}
+          {% endwith %}
 
-  {% else %}
-    <p>None.</p>
-  {% endif %}
+        </ul>
+      </div>
+
+    </div>
+  {% endfor %}
+  </div>
+
+{% else %}
+  <p>None.</p>
+{% endif %}
