--- a/src/quest_manager/templates/quest_manager/tab_quests_submission.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_submission.html
@@ -6,11 +6,16 @@
     <div class="col-xs-5">Quest</div>
     <div class="col-xs-1">XP   </div>
     <div class="col-xs-2">Ave Time</div>
-    <div class="col-xs-3">Due Date</div>
+    <div class="col-xs-3">Status</div>
   </div>
   <div class="panel-group panel-group-packed" id="accordion" role="tablist" aria-multiselectable="true">
   {% for s in submissions %}
-    <div class="panel panel-default accordian {% if s.id == active_id %} active {% endif %}">
+    <div class="panel
+      {% if s.is_awaiting_approval %}panel-warning
+      {% elif s.is_returned %}panel-danger
+      {% else %}panel-default
+      {% endif %}
+      accordian {% if s.id == active_id %} active {% endif %}">
       <div class="panel-heading accordian accordian-trigger panel-heading-tall
         {% if s.id == active_id %} active {% endif %}"
         role="tab" id="heading-{{s.id}}"
@@ -26,7 +31,20 @@
             <div class="col-xs-5">{{s.quest.name}}</div>
             <div class="col-xs-1">{{s.quest.xp}}  </div>
             <div class="col-xs-2">{{s.quest.id}}</div>
-            <div class="col-xs-3"><small>{{s.quest.date_expired}}</small></div>
+            <div class="col-xs-3">
+              {% if s.is_approved %}
+                Approved<br/>
+                <small>{{s.time_approved}}</small>
+              {% elif s.is_awaiting_approval %}
+                Submitted<br/>
+                <small>{{s.time_completed}}</small>
+              {% elif s.is_returned %}
+                Returned<br/>
+                <small>{{s.updated|timesince}} ago</small>
+              {% else %}
+                In progress
+              {% endif %}
+            </div>
           </h4>
         </div>
       </div>
