--- a/src/profile_manager/templates/profile_manager/base.html
+++ b/src/profile_manager/templates/profile_manager/base.html
@@ -1,6 +1,10 @@
 {% extends "base_sidebar.html" %}
 
 {% block head_title %}Profiles | {% endblock %}
+{% block head %}{% endblock %}
 
+{% block content_first %}{% endblock %}
 {% block heading %}{% block heading_inner %}{% endblock%}<i class="fa fa-user pull-right"></i>{% endblock %}
 {% block content %}{% endblock %}
+
+{% block js %}{% endblock %}
