--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -1,10 +1,64 @@
 {% extends "profile_manager/base.html" %}
 
 {% block heading_inner %}{{ object.user.username }}'s Profile
-  <a class="btn btn-info" href="{% url 'profiles:profile_update' %}" role="button">Edit</a>
+  <a class="btn btn-info" href="{% url 'profiles:profile_update' object.id %}" role="button">Edit</a>
 {% endblock %}
 
 {% block content %}
+
+<div class="row">
+  <div class="col-sm-2">
+    <img class="img-responsive img-rounded center-block" src="{{object.avatar.url}}" alt="avatar"/>
+  </div>
+  <div class="col-sm-10">
+
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+
+        <h3 class="panel-title">
+          <div class="pull-right">Rank:  XP: </div>
+          {{object.first_name}}
+          {% if object.preferred_name %} ({{ object.preferred_name}}) {% endif %}
+          {{object.last_name}}
+          {% if object.alias %}, aka {{ object.alias}} {% endif %}
+        </h3>
+
+      </div>
+      <div class="panel-body">
+
+        <!-- <div class="row">
+          <div class="col-sm-1">
+            Group
+          </div>
+          <div class="col-sm-10">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                  style="width: 60%;">
+                <span class="sr-only">60% Complete</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-2">
+            X | 1000
+          </div>
+        </div> -->
+        <div class="pull-right"> x | 1000</div>
+        <div>Group </div>
+        <div class="progress progress-xp">progress
+          <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+              style="width: 60%;">progress-bar
+            <span class="sr-only">60% Complete</span>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+</div>
+
+
   <p>User ID: {{object.user.id}}</p>
   <p>Profile ID: {{object.id}}</p>
   <p>Alias: {{object.alias}} </p>
