--- a/src/profile_manager/templates/profile_manager/profile_form.html
+++ b/src/profile_manager/templates/profile_manager/profile_form.html
@@ -6,7 +6,7 @@
 {% block content %}
 <form action="{{ action_value }}" enctype="multipart/form-data" method="post">{% csrf_token %}
   {{ form|crispy }}
-  <a href="{% url 'profiles:profile_detail' request.user.profile.id %}" role="button" class="btn btn-danger">Cancel</a>
+  <a href="{% url 'profiles:profile_list' %}" role="button" class="btn btn-danger">Cancel</a>
   <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
 </form>
 {% endblock %}
