--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -19,8 +19,7 @@
           <div class="pull-right">Rank:  XP: </div>
           {{object.first_name}}
           {% if object.preferred_name %} ({{ object.preferred_name}}) {% endif %}
-          {{object.last_name}}
-          {% if object.alias %}, aka {{ object.alias}} {% endif %}
+          {{object.last_name}}{% if object.alias %}, aka {{ object.alias}}{% endif %}
         </h3>
 
       </div>
@@ -51,25 +50,77 @@
           </div>
         </div>
 
+        <div class="pull-right"> x | 1000</div>
+        <div>Group </div>
+        <div class="progress progress-xp">progress
+          <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+              style="width: 60%;">progress-bar
+            <span class="sr-only">60% Complete</span>
+          </div>
+        </div>
+
       </div>
 
-    </div>
+    </div> <!--panel -->
 
   </div>
 </div>
 
+<div class="row">
+  <div class="col-sm-6">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title">General</h3>
+      </div>
+      <div class="panel-body">
+        <p>SN: {{ object.student_number}}</p>
+        <p>Grad: {{ object.grad_year}}</p>
+        <p>Created: {{ object.datetime_created}} ({{ object.datetime_created|timesince}} ago)</p>
+      </div>
+     </div> <!--panel -->
+     <div class="panel panel-info">
+       <div class="panel-heading">
+         <h3 class="panel-title">Quests</h3>
+       </div>
+       <div class="panel-body">
+         <p>Badges</p>
+       </div>
+      </div> <!--panel -->
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h3 class="panel-title">Recent Activity</h3>
+        </div>
+        <div class="panel-body">
+          <p>Badges</p>
+        </div>
+       </div> <!--panel -->
+  </div>
+  <div class="col-sm-6">
+     <div class="panel panel-info">
+       <div class="panel-heading">
+         <h3 class="panel-title">Badges</h3>
+       </div>
+       <div class="panel-body">
+         <p>Badges</p>
+       </div>
+      </div> <!--panel -->
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h3 class="panel-title">Achievements</h3>
+        </div>
+        <div class="panel-body">
+          <p>Badges</p>
+        </div>
+       </div> <!--panel -->
+       <div class="panel panel-info">
+         <div class="panel-heading">
+           <h3 class="panel-title">Awards</h3>
+         </div>
+         <div class="panel-body">
+           <p>Badges</p>
+         </div>
+        </div> <!--panel -->
+  </div>
+</div>
 
-  <p>User ID: {{object.user.id}}</p>
-  <p>Profile ID: {{object.id}}</p>
-  <p>Alias: {{object.alias}} </p>
-  <p>First Name: {{object.first_name}} </p>
-  <p>Last Name: {{object.last_name}} </p>
-  <p>Preferred Name: {{ object.preferred_name}} </p>
-  <p>Avatar: {% if object.avatar %}
-    <img src="{{object.avatar.url}}" alt="avatar" height="16px"/>
-    {% else %}None
-  {% endif %}</p>
-  <p>SN: {{ object.student_number}}</p>
-  <p>Grad: {{ object.grad_year}}</p>
-  <p>Created: {{ object.datetime_created}}</p>
 {% endblock %}
