--- a/src/quest_manager/templates/quest_manager/comments.html
+++ b/src/quest_manager/templates/quest_manager/comments.html
@@ -1,7 +1,7 @@
 {% load crispy_forms_tags %}
 {% load comment_tags %}
   {% for comment in target_comments %}
-    <li class="list-group-item avatar-left-sm">
+    <li class="list-group-item avatar-left-sm" id="comment-{{comment.id}}">
       <img class="avatar" src="{{comment.user.profile.avatar.url}}" alt="avatar"/>
       <div class="comment-heading">
         <a href="{% url 'profiles:profile_detail' comment.user.profile.id %}">{{comment.user}}</a>
