--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -51,9 +51,31 @@
       <h3 class="panel-title">Quest Submission Form</h3>
     </div>
     <div class="panel-body panel-summernote">
-      {% with target=submission  form=main_comment_form%}
-        {% include "quest_manager/comment_form_main.html" %}
-      {% endwith %}
+      {% if request.user.is_staff %}
+        <form method="POST" enctype="multipart/form-data" action="{% url 'quests:approve' submission.id%}">
+      {% else %}
+        <form method="POST" enctype="multipart/form-data" action="{% url 'quests:complete' submission.id%}">
+      {% endif %}
+
+        {% csrf_token %}
+        {{ submission_form | crispy }}
+
+      {% if request.user.is_staff %}
+        {% if submission.is_approved %}
+          <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment' />
+        {% else %}
+          <input type='submit' name='approve_button' class='btn btn-success' value='Approve' />
+        {% endif %}
+          <input type='submit' name='return_button' class='btn btn-danger' value='Return' />
+      {% else %}
+        {% if submission.is_approved %}
+          <input type='submit' name='comment' class='btn btn-primary' value='Add Comment' />
+        {% else %}
+          <input type='submit' name='complete' class='btn btn-primary' value='Submit Quest for Completion' />
+          <a class="btn btn-danger" href="{% url 'quests:drop' submission.id %}" role="button">Drop Quest</a>
+        {% endif %}
+      {% endif %}
+      </form>
     </div>
   </div>
 
